--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-	"name": "api-personality_test",
-	"version": "1.0.0",
-	"description": "",
-	"main": "app.js",
-	"dependencies": {
-		"express": "^4.16.4",
-		"mongoose": "^5.3.15"
-	},
-	"devDependencies": {
-		"nodemon": "^1.18.8"
-	},
-	"scripts": {
-		"dev": "nodemon ./src/server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/RafaelSSouzaADS/api-personality_test.git"
-	},
-	"keywords": [
-		"Node",
-		"Restful"
-	],
-	"author": "Rafael Silva de Souza",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/RafaelSSouzaADS/api-personality_test/issues"
-	},
-	"homepage": "https://github.com/RafaelSSouzaADS/api-personality_test#readme"
+  "name": "api-personality_test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "dependencies": {
+    "bcrypt": "^3.0.2",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.15"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.8",
+    "supertest": "^3.3.0"
+  },
+  "scripts": {
+    "dev": "nodemon ./src/server.js",
+    "test": "CONFIGS=test mocha --timeout 50000"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RafaelSSouzaADS/api-personality_test.git"
+  },
+  "keywords": [
+    "Node",
+    "Restful"
+  ],
+  "author": "Rafael Silva de Souza",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RafaelSSouzaADS/api-personality_test/issues"
+  },
+  "homepage": "https://github.com/RafaelSSouzaADS/api-personality_test#readme"
 }
