--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "express": "^4.16.4",
-    "mongoose": "^5.3.15"
+    "mongoose": "^5.3.15",
+    "swagger-jsdoc": "^3.2.6",
+    "swagger-model-validator": "^3.0.5",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -15,7 +18,7 @@
     "supertest": "^3.3.0"
   },
   "scripts": {
-    "dev": "nodemon ./src/server.js",
+    "dev": "nodemon server.js",
     "test": "CONFIGS=test mocha --timeout 50000"
   },
   "repository": {
