--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15",
+    "morgan": "^1.9.1",
     "swagger-jsdoc": "^3.2.6",
     "swagger-model-validator": "^3.0.5",
     "swagger-ui-express": "^4.0.2"
