--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-jsonschema": "^1.1.6",
     "http-status": "^1.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15",
