--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "supertest": "^3.3.0"
   },
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "CONFIGS=test mocha --timeout 50000"
   },
