--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "morgan": "^1.9.1",
     "swagger-jsdoc": "^3.2.6",
     "swagger-model-validator": "^3.0.5",
-    "swagger-ui-express": "^4.0.2"
+    "swagger-ui-express": "^4.0.2",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
