--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-things": "^0.2.0",
+    "dotenv": "^6.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.8",
     "supertest": "^3.3.0"
@@ -26,7 +28,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "CONFIGS=test mocha --timeout 50000"
+    "test": "mocha --timeout 50000"
   },
   "repository": {
     "type": "git",
